// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`C3188679 imported power-pin labels: C3188679-pin-labels 1`] = `
[
  {
    "aliases": [
      "EN",
      "UVLO",
      "pin1",
      "1",
    ],
    "name": "EN",
    "pinNumber": 1,
  },
  {
    "aliases": [
      "SS",
      "TRK",
      "pin3",
      "3",
    ],
    "name": "SS",
    "pinNumber": 3,
  },
]
`;

exports[`C3662807 imported power-pin labels: C3662807-pin-labels 1`] = `
[
  {
    "aliases": [
      "EN",
      "UVLO",
      "pin1",
      "1",
    ],
    "name": "EN",
    "pinNumber": 1,
  },
  {
    "aliases": [
      "OVLO",
      "OVCSEL",
      "pin2",
      "2",
    ],
    "name": "OVLO",
    "pinNumber": 2,
  },
  {
    "aliases": [
      "PG",
      "AUXOFF",
      "pin3",
      "3",
    ],
    "name": "PG",
    "pinNumber": 3,
  },
  {
    "aliases": [
      "PGTH",
      "N_FLT",
      "pin4",
      "4",
    ],
    "name": "PGTH",
    "pinNumber": 4,
  },
]
`;
